# t3d

./: .prettierignore  Cargo.toml  LICENSE  README.md  index.html  nx.json  package.json  pnpm-lock.yaml  puppeteer-run.sh  puppeteer.sh  rsw.toml  tsconfig.json  vite.config.ts
apps/development/: esbuild.config.ts  esbuild.watch.ts  index.html  package.json
apps/development/server/: index.ts
apps/development/src/: esbuild.d.ts  index.ts
crates/core/: Cargo.toml
crates/core/src/: lib.rs  linker.rs  utils.rs  webgl.rs
crates/core/src/math/: matrix4.rs  mod.rs  vector3.rs
crates/core/src/renderer/: buffers.rs  mod.rs  program.rs  shaders.rs  webgl.rs
crates/core/src/wgpu/: game.rs
lib/: index.ts  types.ts
lib/math/: common.ts  euler.ts  index.ts  quaternion.ts  vector3.ts
lib/renderer/: WebGLRenderer.ts
lib/shaders/: fragment.frag  index.ts  util.ts
scripts/: build  bump  bump.ts  clean  dev  graph  nx  publish  watch
src/: main.scss  main.ts  t3d.ts
src/renderer/: 2DWebGLRenderer.ts  3DWebGLRenderer.ts  index.ts
src/shaders/: fragment.ts  index.ts  vertex.ts
src/styles/: main.scss
